// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WAN/> Snapshot WAN IPv4 (pppoe). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,30 +43,69 @@
        </div>
        <div
          class=\\"form-group\\"
        >
          <label
-           for=\\"2\\"
+           for=\\"6\\"
          >
-           DHCP hostname
+           PAP/CHAP username
          </label>
          <div
            class=\\"input-group\\"
          >
            <input
-             class=\\"form-control\\"
-             id=\\"2\\"
+             class=\\"form-control  is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
              type=\\"text\\"
              value=\\"\\"
            />
          </div>
-         <small
-           class=\\"form-text text-muted\\"
+         <div
+           class=\\"invalid-feedback\\"
          >
-           Hostname which will be provided to DHCP server.
-         </small>
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"7\\"
+         >
+           PAP/CHAP password
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             autocomplete=\\"new-password\\"
+             class=\\"form-control  is-invalid\\"
+             id=\\"7\\"
+             required=\\"\\"
+             type=\\"password\\"
+             value=\\"\\"
+           />
+           <div
+             class=\\"input-group-append\\"
+           >
+             <button
+               class=\\"input-group-text\\"
+               type=\\"button\\"
+             >
+               <i
+                 class=\\"fa fa-eye\\"
+               />
+             </button>
+           </div>
          </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
        <h2>
          IPv6 Settings
        </h2>
        <div
          class=\\"form-group\\"
@@ -137,10 +176,11 @@
        <div
          class=\\"text-right\\"
        >
          <button
            class=\\"btn btn-primary  col-sm-12 col-md-3 col-lg-2\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            Save
          </button>
        </div>"
`;

exports[`<WAN/> Snapshot WAN IPv4 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,28 +43,127 @@
        </div>
        <div
          class=\\"form-group\\"
        >
          <label
-           for=\\"2\\"
+           for=\\"6\\"
+         >
+           IP address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"6\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
        >
-           DHCP hostname
+         <label
+           for=\\"7\\"
+         >
+           Network mask
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"7\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"8\\"
+         >
+           Gateway
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"8\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"9\\"
+         >
+           DNS server 1
          </label>
          <div
            class=\\"input-group\\"
          >
            <input
              class=\\"form-control\\"
-             id=\\"2\\"
+             id=\\"9\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           DNS server address is not required as the built-in DNS resolver is capable of working without it.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"10\\"
+         >
+           DNS server 2
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"10\\"
              type=\\"text\\"
              value=\\"\\"
            />
          </div>
          <small
            class=\\"form-text text-muted\\"
          >
-           Hostname which will be provided to DHCP server.
+           DNS server address is not required as the built-in DNS resolver is capable of working without it.
          </small>
        </div>
        <h2>
          IPv6 Settings
        </h2>
@@ -137,10 +236,11 @@
        <div
          class=\\"text-right\\"
        >
          <button
            class=\\"btn btn-primary  col-sm-12 col-md-3 col-lg-2\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            Save
          </button>
        </div>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4), dynamic IPv4 handling enabled. 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -232,10 +232,100 @@
                Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
              </small>
            </label>
          </div>
        </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"20\\"
+         >
+           Tunnel ID
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"20\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           ID of your tunnel which was assigned to you by the provider.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"21\\"
+         >
+           Username
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"21\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           Username which will be used to provide credentials to your tunnel provider.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"22\\"
+         >
+           Key
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"22\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           Key which will be used to provide credentials to your tunnel provider.
+         </small>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-group\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (6in4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -105,10 +105,137 @@
            >
              Static IP address (manual configuration)
            </option>
          </select>
        </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"8\\"
+         >
+           Provider IPv4
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"8\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           This address will be used as a endpoint of the tunnel on the provider's side.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"9\\"
+         >
+           Routed IPv6 prefix
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"9\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           IPv6 addresses which will be routed to your network.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"10\\"
+         >
+           MTU
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"10\\"
+             max=\\"1480\\"
+             min=\\"1280\\"
+             required=\\"\\"
+             type=\\"number\\"
+             value=\\"\\"
+           />
+           <div
+             class=\\"input-group-append\\"
+           >
+             <button
+               aria-label=\\"Increase\\"
+               class=\\"btn btn-outline-secondary\\"
+               type=\\"button\\"
+             >
+               <i
+                 class=\\"fas fa-plus\\"
+               />
+             </button>
+             <button
+               aria-label=\\"Decrease\\"
+               class=\\"btn btn-outline-secondary\\"
+               type=\\"button\\"
+             >
+               <i
+                 class=\\"fas fa-minus\\"
+               />
+             </button>
+           </div>
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <div
+           class=\\"custom-control custom-checkbox \\"
+         >
+           <input
+             class=\\"custom-control-input\\"
+             id=\\"11\\"
+             type=\\"checkbox\\"
+           />
+           <label
+             class=\\"custom-control-label\\"
+             for=\\"11\\"
+           >
+             Dynamic IPv4 handling
+             <small
+               class=\\"form-text text-muted\\"
+             >
+               Some tunnel providers allow you to have public dynamic IPv4. Note that you need to fill in some extra fields to make it work.
+             </small>
+           </label>
+         </div>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-group\\"
@@ -137,10 +264,11 @@
        <div
          class=\\"text-right\\"
        >
          <button
            class=\\"btn btn-primary  col-sm-12 col-md-3 col-lg-2\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            Save
          </button>
        </div>"
`;

exports[`<WAN/> Snapshot WAN IPv6 (6to4). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -105,10 +105,34 @@
            >
              Static IP address (manual configuration)
            </option>
          </select>
        </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"8\\"
+         >
+           Public IPv4
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"8\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           In order to use 6to4 protocol, you might need to specify your public IPv4 address manually (e.g. when your WAN interface has a private address which is mapped to public IP).
+         </small>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-group\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (dhcpv6). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -105,10 +105,34 @@
            >
              Static IP address (manual configuration)
            </option>
          </select>
        </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"8\\"
+         >
+           Custom DUID
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"8\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           DUID which will be provided to the DHCPv6 server.
+         </small>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-group\\""
`;

exports[`<WAN/> Snapshot WAN IPv6 (static). 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -105,10 +105,143 @@
            >
              Static IP address (manual configuration)
            </option>
          </select>
        </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"8\\"
+         >
+           Address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"8\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           IPv6 address and prefix length for WAN interface e.g. 2001:db8:be13:37da::1/64
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"9\\"
+         >
+           Gateway
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"9\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"10\\"
+         >
+           Prefix
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"10\\"
+             required=\\"\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           Address range for local network, e.g. 2001:db8:be13:37da::/64
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"11\\"
+         >
+           DNS server 1
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"11\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           DNS server address is not required as the built-in DNS resolver is capable of working without it.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"12\\"
+         >
+           DNS server 2
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             id=\\"12\\"
+             type=\\"text\\"
+             value=\\"\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           DNS server address is not required as the built-in DNS resolver is capable of working without it.
+         </small>
+       </div>
        <h2>
          MAC Settings
        </h2>
        <div
          class=\\"form-group\\"
@@ -137,10 +270,11 @@
        <div
          class=\\"text-right\\"
        >
          <button
            class=\\"btn btn-primary  col-sm-12 col-md-3 col-lg-2\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            Save
          </button>
        </div>"
`;

exports[`<WAN/> Snapshot: MAC enabled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -133,14 +133,69 @@
              Useful in cases, when a specific MAC address is required by your internet service provider.
            </small>
          </div>
        </div>
        <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"9\\"
+         >
+           Current MAC address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control\\"
+             disabled=\\"\\"
+             id=\\"9\\"
+             type=\\"text\\"
+             value=\\"00:00:00:00:00:00\\"
+           />
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           MAC address of the WAN interface.
+         </small>
+       </div>
+       <div
+         class=\\"form-group\\"
+       >
+         <label
+           for=\\"10\\"
+         >
+           Set the new MAC address
+         </label>
+         <div
+           class=\\"input-group\\"
+         >
+           <input
+             class=\\"form-control  is-invalid\\"
+             id=\\"10\\"
+             required=\\"\\"
+             type=\\"text\\"
+           />
+         </div>
+         <div
+           class=\\"invalid-feedback\\"
+         >
+           This field is required.
+         </div>
+         <small
+           class=\\"form-text text-muted\\"
+         >
+           Colon is used as a separator, for example 00:11:22:33:44:55
+         </small>
+       </div>
+       <div
          class=\\"text-right\\"
        >
          <button
            class=\\"btn btn-primary  col-sm-12 col-md-3 col-lg-2\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            Save
          </button>
        </div>"
`;

exports[`<WAN/> Snapshot: WAN IPv4 dhcp, WAN IPv6 dhcp, MAC disabled 1`] = `
<DocumentFragment>
  <h1>
    WAN
  </h1>
  <p>
    Here you specify your WAN port settings. Usually, you can leave these options untouched unless instructed otherwise by your internet service provider. Also, in case there is a cable or DSL modem connecting your router to the network, it is usually not necessary to change this setting.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        IPv4 Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          IPv4 protocol
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="pppoe"
          >
            PPPoE (for DSL bridges, etc.)
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          for="2"
        >
          DHCP hostname
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            type="text"
            value=""
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Hostname which will be provided to DHCP server.
        </small>
      </div>
      <h2>
        IPv6 Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          IPv6 protocol
        </label>
        <select
          class="custom-select"
          id="3"
        >
          <option
            value="6in4"
          >
            6in4 (public IPv4 address required)
          </option>
          <option
            value="6to4"
          >
            6to4 (public IPv4 address required)
          </option>
          <option
            value="dhcpv6"
          >
            DHCPv6 (automatic configuration)
          </option>
          <option
            value="none"
          >
            Disable IPv6
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
        </select>
      </div>
      <h2>
        MAC Settings
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="4"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="4"
          >
            Custom MAC address
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Useful in cases, when a specific MAC address is required by your internet service provider.
          </small>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <h2>
    Connection Test
  </h2>
  <p>
    Here you can test you connection settings. Remember to click on the 
    <b>
      Save button
    </b>
     before running the test. Note that sometimes it takes a while before the connection is fully initialized. So it might be useful to wait for a while before running this test.
  </p>
  <div
    class="card p-4 mb-3"
  >
    <form>
      <table
        class="table table-borderless table-hover col-sm-12"
      >
        <tbody>
          <tr>
            <th
              scope="row"
            >
              IPv4 connectivity
            </th>
            <td
              class="text-right"
            >
              <span
                class="text-secondary"
              >
                <i
                  class="fas fa-minus"
                  title="Connection test not started"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              IPv4 gateway connectivity
            </th>
            <td
              class="text-right"
            >
              <span
                class="text-secondary"
              >
                <i
                  class="fas fa-minus"
                  title="Connection test not started"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              IPv6 connectivity
            </th>
            <td
              class="text-right"
            >
              <span
                class="text-secondary"
              >
                <i
                  class="fas fa-minus"
                  title="Connection test not started"
                />
              </span>
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              IPv6 gateway connectivity
            </th>
            <td
              class="text-right"
            >
              <span
                class="text-secondary"
              >
                <i
                  class="fas fa-minus"
                  title="Connection test not started"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="col-sm-12 col-lg-12 p-0 mb-0 text-right"
      >
        <button
          class="btn btn-primary col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Test connection
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
